--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 
 <div class="cont">
   <form class="calcu" name="calc">
